--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -14,7 +14,8 @@
     {% else %}
     <title>HomeEase Services</title>
     {% endif %}
-
+    {% block javascript %}
+    {% endblock %}
 </head>
 
 <body>
@@ -42,8 +43,6 @@
             </div>
             {% endif %}
         </header>
-    
-
         <main class="content-wrap w-100">
 
 
@@ -51,7 +50,7 @@
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category, message in messages %}
-                        <div class="alert alert-{{ category }} alert-dismissible fade show m-auto mb-4 mt-0 w-80 d-flex align-items-center" role="alert">{{ message }}
+                        <div class="alert alert-{{ category }} alert-dismissible fade show m-2 mb-4 mt-0 d-flex align-items-center" role="alert">{{ message }}
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>
                     {% endfor %}
                 {% endif %}
@@ -61,6 +60,7 @@
             {% endblock %}
 
         </main>
+        </div>
         <footer class="p-3 custom-footer">&copy; Copyright 2024, HomeEase Services. All rights reserved.</footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
