--- a/templates/professional_dashboard.html
+++ b/templates/professional_dashboard.html
@@ -15,7 +15,7 @@
     </li>
         
     <li class="nav-item">
-        <a class="nav-link" href="#">Summary</a>
+        <a class="nav-link" href="{{ url_for('summary') }}">Summary</a>
     </li>
     {% endif %}
     <li class="nav-item">
