--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,11 +11,23 @@
         <a class="nav-link" href="{{ url_for('services') }}">Services</a>
     </li>
     {% endif %}
+    {% if current_user.role == 'professional' %}
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Search</a>
+        <ul class="dropdown-menu custom-dropdown">
+            <li><a class="dropdown-item" href="{{ url_for('search_new_requests') }}">New Requests</a></li>
+            {% if user.is_approved %}
+            <li><a class="dropdown-item" href="{{ url_for('search_your_requests')}}">Your Requests</a></li>
+            {% endif %}
+        </ul>
+    </li>
+    {% else %}
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('search') }}">Search</a>
     </li>
+    {% endif %}
     <li class="nav-item">
-        <a class="nav-link" href="#">Summary</a>
+        <a class="nav-link" href="{{ url_for('summary') }}">Summary</a>
     </li>
     {% endif %}
     <li class="nav-item">
