--- a/templates/services.html
+++ b/templates/services.html
@@ -11,11 +11,13 @@
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('search') }}">Search</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Summary</a>
-    </li>
     {% endif %}
     {% if current_user.is_authenticated %}
+    {% if not blocked %}
+    <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('summary') }}">Summary</a>
+    </li>
+    {% endif %}
     <li class="nav-item">
         <a href="{{ url_for('profile') }}" class="nav-link">Profile</a>
     </li>
