--- a/templates/customer_summary.html
+++ b/templates/customer_summary.html
@@ -50,7 +50,7 @@
             You need to be logged in to view your stats.
         </div>
     {% else %}
-    <div class="p-3 border border-success-subtle m-auto shadow flex-row justify-content-around align-items-stretch flex-wrap" style="width:60%">
+    <div class="p-3 border border-success-subtle m-auto shadow flex-row justify-content-around align-items-stretch flex-wrap w-75">
           <div><canvas id="Requests"height="300"></canvas></div>
           <h3 class="page-headings m-2 p-2 text-center">Requests</h3>
     </div>
@@ -81,7 +81,7 @@
                 'rgb(87, 211, 104)'
               ],
               borderWidth: 1,
-              barThickness: 50
+              barThickness: 40
             }]
           },
           options: {
