--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -180,6 +180,97 @@
             </tbody> 
         </table>
     </div>
+    <hr>
+    <div class="container m-auto mt-4 table-responsive">
+        <h3 class="page-headings py-2">Service Requests</h3>
+        <table class="table table-hover align-middle">
+            <thead class="align-middle">
+                <tr class="table-primary">
+                    <th class="t-header" scope="col" style="width: 5%;">Request ID</th>
+                    <th class="t-header" scope="col" style="width: 10%;">Customer</th>
+                    <th class="t-header" scope="col" style="width: 20%;">Service</th>
+                    <th class="t-header" scope="col" style="width: 15%;">Professional Name</th>
+                    <th class="t-header" scope="col" style="width: 10%;">Phone Number</th>
+                    <th class="t-header" scope="col" style="width: 10%;">Date of Request</th>
+                    <th class="t-header" scope="col" style="width: 10%;">Date of Completion</th>
+                    <th class="t-header" scope="col" style="width: 15%;">Remarks</th>
+                    <th class="t-header" scope="col" style="width: 15%;">Status</th>
+                </tr>
+            </thead>
+            
+            <tbody class="table-group-divider">
+                {% for request in requests %}
+                <tr>
+                    <td scope="row">{{ request.id }}</td>
+                    <td>{{ request.customer.name }}</td>
+                    <td>{{ request.service.name }}
+                    </td>
+                    {% if request.prof_id %}
+                    <td>{{ request.professional.name }}</td>
+                    <td>{{ request.professional.phone }}</td>
+                    {% else %}
+                    <td colspan="2" style="text-align: center;">Professional not assigned yet</td>
+                    {% endif %}
+                    <td>{{ request.date_of_request | utc_to_local }}</td>
+                    <td>
+                        {% if request.date_of_completion %}
+                        {{ request.date_of_completion | utc_to_local }}
+                        {% else %}
+                        Not completed yet
+                        {% endif %}
+                    </td>
+                    <td>{{ request.remarks }}
+                    </td>
+                    <td>
+                        {{ request.service_status | capitalize }}
+                    </td>
+                </tr>
+
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <hr>
+    <div class="container m-auto mt-4 table-responsive">
+        <h3 class="page-headings py-2">Reviews</h3>
+        <table class="table table-hover align-middle">
+            <thead class="align-middle">
+                <tr class="table-primary">
+                    <th class="t-header" scope="col" style="width: 5%;">Review ID</th>
+                    <th class="t-header" scope="col" style="width: 5%;">Request ID</th>
+                    <th class="t-header" scope="col" style="width: 10%;">Customer</th>
+                    <th class="t-header" scope="col" style="width: 15%;">Service</th>
+                    <th class="t-header" scope="col" style="width: 10%;">Professional Name</th>
+                    <th class="t-header" scope="col" style="width: 5%;">Rating</th>
+                    <th class="t-header" scope="col" style="width: 10%;">Date of Review</th>
+                    <th class="t-header" scope="col" style="width: 30%;">Review</th>
+                </tr>
+            </thead>
+            
+            <tbody class="table-group-divider">
+                {% for review in reviews %}
+                <tr>
+                    <td scope="row">{{ review.id }}</td>
+                    <td>{{ review.request.id }}</td>
+                    <td>{{ review.customer.name }}</td>
+                    <td>{{ review.request.service.name }}
+                    </td>
+                    <td>{{ review.professional.name }}</td>
+                    <td> <span style="color: rgb(255, 217, 0);">&#9733;</span> {{ review.rating }}</td>
+                    <td>{{ review.date_submitted | utc_to_local }}</td>
+                    <td>
+                        {% if review.review_text %}
+                            {{ review.review_text }}
+                        {% else %}
+                            <span class="text-secondary">No review text</span>
+                        {% endif %}
+                    </td>
+                </tr>
+
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
 
     <!-- MODALS -->
