--- a/templates/professional_search2.html
+++ b/templates/professional_search2.html
@@ -97,7 +97,11 @@
 
 
     <div class="container  table-responsive">
-        <h3 class="page-headings py-2">Your Requests</h3>
+        <h3 class="page-headings py-2">Your Requests
+            {% if prev_requests %}
+                ({{ prev_requests | length }} Results)
+            {% endif %}
+        </h3>
         <table class="table table-hover align-middle">
             <thead class="align-middle">
                 <tr class="table-primary">
