--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -51,7 +51,7 @@ DASHBOARD
     {% if current_user.is_authenticated %}
     <h2 class="page-headings pb-3">Welcome, {{ user.name }}!</h2>
     {% else %}
-    <h2 class="page-headings mx-3 px-3">Home services at your doorstep!</h2>
+    <h2 class="page-headings pb-3">Home services at your doorstep!</h2>
     {% endif %}
     <div class="row">
         <h4 class="page-headings mb-3 col-12 col-sm-6 col-lg-6">What are you looking for today?</h4>
